--- a/email/signatures/milano.html
+++ b/email/signatures/milano.html
@@ -52,9 +52,14 @@
                     <img src="https://media.axerve.com/email/icon/socialin.png" width="16" height="16" />
                 </a>
             </td>
-            <td style="padding: 0;" width="19">
+            <td style="padding: 0;" width="27">
                 <a href="https://www.instagram.com/axerve/">
                     <img src="https://media.axerve.com/email/icon/socialig.png" width="16" height="16" />
+                </a>
+            </td>
+            <td style="padding: 0;" width="30">
+                <a href="https://www.tiktok.com/@axerve">
+                    <img src="https://media.axerve.com/email/icon/socialtk.png" width="16" height="16" />
                 </a>
             </td>
         </tr>
