--- a/alessiodamonti/index.html
+++ b/alessiodamonti/index.html
@@ -24,7 +24,7 @@
 
     <div class="white-section">
       <div class="content-section">
-        <h3 class="text-align-center mt-5">Download now Axerve<br/>exclusive Whitepapers</h3>
+        <h3 class="text-align-center mt-5">Download Axerve's exclusive whitepapers for free</h3>
 
         <a href="https://www.axerve.com/en/learn/whitepaper/payment-orchestration?utm_source=digitalcard&utm_medium=Qrcode&utm_content=AD" target="_blank" >
           <img class="mt-3" srcset="images/payment-orchestra-box.png 2x" />
