--- a/alessiodamonti/index.html
+++ b/alessiodamonti/index.html
@@ -16,9 +16,10 @@
 
         <h3 class="mt-2">Alessio Damonti</h3>
         <span class="job-title">Deputy CEO and CCO</span>
-          <a class="large-button mt-3" href="mailto:alessio.damonti@axerve.com">alessio.damonti@axerve.com</a>
-          <a class="large-button mt-3" href="tel:+393409662408">+39 340 9662408</a>
-          <a class="large-button mt-3 mb-6" href="https://www.linkedin.com/in/damontialessio/" target="_blank" rel="noopener noreferrer">linkedin.com/in/damontialessio</a>
+          <a class="large-button mt-2" href="alessiodamonti.vcf">Save / Download contact</a>
+          <a class="large-button mt-2" href="mailto:alessio.damonti@axerve.com">alessio.damonti@axerve.com</a>
+          <a class="large-button mt-2" href="tel:+393409662408">+39 340 9662408</a>
+          <a class="large-button mt-2 mb-6" href="https://www.linkedin.com/in/damontialessio/" target="_blank" rel="noopener noreferrer">linkedin.com/in/damontialessio</a>
       </div>
     </div>
 
@@ -30,9 +31,8 @@
           <img class="mt-3" srcset="images/payment-orchestra-box.png 2x" />
         </a>
         <a href="https://www.axerve.com/en/learn/whitepaper/digital-payments-trends?utm_source=digitalcard&utm_medium=Qrcode&utm_content=AD" target="_blank" >
-          <img class="mt-3" srcset="images/new-technologies-box.png 2x" />
+          <img class="mt-2" srcset="images/new-technologies-box.png 2x" />
         </a>
-
         <a class="blue-button mt-3 mb-8" href="https://www.axerve.com/en/learn/whitepaper?utm_source=digitalcard&utm_medium=Qrcode&utm_content=AD" target="_blank" >View more</a>
       </div>
     </div>
