--- a/alessio-damonti/index.html
+++ b/alessio-damonti/index.html
@@ -19,7 +19,7 @@
           <span class="job-title">Deputy Ceo Axerve & Head of<br>International Business Fabrick</span>
         </span>
 
-        <a class="large-button mt-3" href="alessiodamonti.vcf">Save / Download contact</a>
+        <a class="large-button mt-3" href="AlessioDamonti.vcf">Save / Download contact</a>
         <a class="large-button mt-2" href="mailto:alessio.damonti@axerve.com">alessio.damonti@axerve.com</a>
         <a class="large-button mt-2" href="tel:+393409662408">+39 340 9662408</a>
         <a class="large-button mt-2 mb-6" href="https://www.linkedin.com/in/damontialessio/" target="_blank" rel="noopener noreferrer">linkedin.com/in/damontialessio</a>
