--- a/alberto-mussinatto/index.html
+++ b/alberto-mussinatto/index.html
@@ -19,7 +19,8 @@
           <span class="job-title">Head of Platform<br>Fabrick</span>
         </span>
 
-        <a class="large-button mt-3" href="mailto:alberto.mussinatto@fabrick.com">alberto.mussinatto@fabrick.com</a>
+        <a class="large-button mt-3" href="AlbertoMussinatto.vcf">Save / Download contact</a>
+        <a class="large-button mt-2" href="mailto:alberto.mussinatto@fabrick.com">alberto.mussinatto@fabrick.com</a>
         <a class="large-button mt-2" href="tel:+393497254312">+39 3497 254312</a>
         <a class="large-button mt-2 mb-6" href="https://www.linkedin.com/in/alberto-mussinatto-3b853ab9/" target="_blank" rel="noopener noreferrer">linkedin.com/in/alberto-mussinatto</a>
       </div>
