--- a/jonathan-taylor/index.html
+++ b/jonathan-taylor/index.html
@@ -19,7 +19,8 @@
           <span class="job-title">Business Development Manager<br>Axerve & Fabrick</span>
         </span>
 
-        <a class="large-button mt-3" href="mailto:jonathan.taylor@axerve.com">jonathan.taylor@axerve.com</a>
+        <a class="large-button mt-3" href="JonathanTaylor.vcf">Save / Download contact</a>
+        <a class="large-button mt-2" href="mailto:jonathan.taylor@axerve.com">jonathan.taylor@axerve.com</a>
         <a class="large-button mt-2" href="tel:+447932759265">+44 7932 759265</a>
         <a class="large-button mt-2 mb-6" href="https://www.linkedin.com/in/jon-taylor-25bb4347/" target="_blank" rel="noopener noreferrer">linkedin.com/in/jon-taylor-25bb4347</a>
       </div>
