--- a/rajat-sharma/index.html
+++ b/rajat-sharma/index.html
@@ -19,7 +19,8 @@
           <span class="job-title">Business Development Manager<br>Axerve & Fabrick</span>
         </span>
 
-        <a class="large-button mt-3" href="mailto:rajat.sharma@axerve.com">rajat.sharma@axerve.com</a>
+        <a class="large-button mt-3" href="RajatSharma.vcf">Save / Download contact</a>
+        <a class="large-button mt-2" href="mailto:rajat.sharma@axerve.com">rajat.sharma@axerve.com</a>
         <a class="large-button mt-2" href="tel:+447878870377">+44 787 8870377</a>
         <a class="large-button mt-2 mb-6" href="https://www.linkedin.com/in/rajat-sharma-a42bb4159/" target="_blank" rel="noopener noreferrer">linkedin.com/in/rajat-sharma-a42bb4159</a>
       </div>
