--- a/sergio-camara-liceras/index.html
+++ b/sergio-camara-liceras/index.html
@@ -20,7 +20,7 @@
         </span>
 
         <a class="large-button mt-3" href="SergioCámaraLiceras.vcf">Descargar contacto</a>
-        <a class="large-button mt-2" href="mailto:sergio.camaraliceras@axerve.com">sergio.camaraliceras@axerve.com</a>
+        <a class="large-button mt-2" href="mailto:sergio.camaraliceras@fabrick.com">sergio.camaraliceras@fabrick.com</a>
         <a class="large-button mt-2" href="tel:+34648864044">+34 648 864044</a>
         <a class="large-button mt-2 mb-6" href="https://www.linkedin.com/in/sergio-cámara-10843199/" target="_blank" rel="noopener noreferrer">linkedin.com/in/sergio-cámara-10843199</a>
       </div>
